First pass capturing barcode data

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
     <div id="output">
         <h3>Image Details:</h3>
         <div id="image-details"></div>
-        <h3>QR Code Data:</h3>
+        <h3>QR Code & Barcode Data:</h3>
         <div id="qr-result"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/quagga@0.12.1/dist/quagga.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html> 
